# ATMproject

./: .cproject  .gitignore  .parasoft  .project  CMakeLists.txt  Makefile  README.md  cpptest-coverage.cmake  cpptest_custom_excludes.lst  cpptestcli.properties  gtest_results.xml
.devcontainer/: devcontainer.json
.github/workflows/: SCA-main.yml  SCA.yml  main.yml  pull-request.yml
conf/: Build Test Executable Custom.properties  Generate Unit Tests Custom.properties  Load Test Results Custom.properties  Run Unit Tests Custom.properties
include/: ATM.hxx  Account.hxx  Bank.hxx  BaseDisplay.hxx  TestObjectFactory.hxx
jenkins/: .gitignore  cpptest.properties  cpptest_run.sh
reports/: report (1).xml  report (2).xml  report (3).xml  report (4).xml  report (5).xml  report (6).xml  report (7).xml  report (8).xml  report (9).xml  report.html
src/: ATM.cxx  Account.cxx  Bank.cxx  BaseDisplay.cxx  TestObjectFactory.cxx
stubs/: my_user_stubc.cxx
stubs/autogenerated/: auto_f317cc48.cxx
tests/autogenerated/: TestSuite_ATM_cxx.cpp  TestSuite_Account_cxx.cpp
tests/gt/: AccountTest.hpp  BankTest.hpp  BaseDisplayTest.hpp  gtest_main.cpp
